# sertest-ng

./: .gitignore  README.md  SP330.kicad_sym  _config.yml  can.kicad_sch  eurovibes.kicad_wks  fp-lib-table  index.md  led.kicad_sym  serial.kicad_sch  sertest-ng.kibot.yaml  sertest-ng.kicad_pcb  sertest-ng.kicad_prl  sertest-ng.kicad_pro  sertest-ng.kicad_sch  sym-lib-table  usbserial.kicad_sch
.github/workflows/: main.yml  zephyr.yml
Fabrication/: pcbnew_export_screencast.ogv  sertest-ng-drc_0.1.html  sertest-ng-drc_0.2.html  sertest-ng-erc_0.1.html  sertest-ng-erc_0.2.html  sertest-ng_bom_fusion.csv  sertest-ng_bom_jlc.csv  sertest-ng_cpl_fusion.csv  sertest-ng_cpl_jlc.csv
Fabrication/BoM/: sertest-ng-bom_0.1.csv  sertest-ng-bom_0.1.html  sertest-ng-bom_0.1.xlsx  sertest-ng-bom_0.2.csv  sertest-ng-bom_0.2.html  sertest-ng-bom_0.2.xlsx  sertest-ng-ibom_0.1.html  sertest-ng-ibom_0.2.html
Fabrication/Drill/: sertest-ng-NPTH_drill_0.1.drl  sertest-ng-NPTH_drill_0.1.gbr  sertest-ng-NPTH_drill_0.2.drl  sertest-ng-NPTH_drill_0.2.gbr  sertest-ng-PTH_drill_0.1.drl  sertest-ng-PTH_drill_0.1.gbr  sertest-ng-PTH_drill_0.2.drl  sertest-ng-PTH_drill_0.2.gbr  sertest-ng-drl.rpt
configs/: FusionPCB_position.kibot.yaml
enclosure/: sertest-ng.FCStd
eurovibes.pretty/: LOGO.kicad_mod
firmware/: .gitignore
firmware/application/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  west.yml
firmware/application/src/: main.c  rtc.c  sertest-ng.h  type_plate.c  usb.c
fixes.pretty/: 236-402.stp  236-404.stp  LED_Kingbright_AAA3528ESGCT.kicad_mod  SW_Push_2P2T_Toggle_CK_PVA2xxH1xxxxxxV2.kicad_mod  TL2202xxYA.stp  TerminalBlock_WAGO_236-402_1x02_P5.00mm_45Degree.kicad_mod  TerminalBlock_WAGO_236-404_1x04_P5.00mm_45Degree.kicad_mod
software/: sertest-ng.jflash
(+75 files in other folders)
